# capstonealgorithmsipandpay

./: .gitignore  Capstone_Full_Draft.docx  LICENSE  README.md  capstone_full_draft.md  pyproject.toml  requirements.txt  shift_scores.json
.github/workflows/: ci.yml
docs/: README_RUNNING.md  README_TECHNICAL.md
scripts/: demo_algorithm.py  example_usage.py  test_random.py
src/: __init__.py
src/data/: __init__.py  mock_data.py
src/evaluation/: __init__.py  ablations.py  comparisons.py  eda.py  sensitivity.py  stability.py
src/scoring/: __init__.py  aggregate.py  complexity.py  confidence.py  features.py  normalize.py  schema.py  score_shift.py  venue_periods.py
tests/: __init__.py  test_ablations.py  test_aggregate.py  test_algorithm.py  test_complexity.py  test_components.py  test_confidence.py  test_normalize.py  test_venue_periods.py
